--- a/test-output/old/FREE CRM Application Test Automation Test Suite/methods-alphabetical.html
+++ b/test-output/old/FREE CRM Application Test Automation Test Suite/methods-alphabetical.html
@@ -1,44 +1,88 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>FREE CRM Application Test Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:47:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifyemailIDfieldTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifyemailIDfieldTest</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:53:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifyLoginBtnTest()[pri:5, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifyLoginBtnTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:51:41</td>   <td>237021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.deleteSingleContactsTest()[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">deleteSingleContactsTest</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:49:39</td>   <td>-225066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifyemailIDfieldTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifyemailIDfieldTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:46:49</td>   <td>-55602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">loginPageTitleTest</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:52:23</td>   <td>-61705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifypasswordfieldTest()[pri:4, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifypasswordfieldTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:50:08</td>   <td>143832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectMultipleContactsTest()[pri:3, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectMultipleContactsTest</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:53:56</td>   <td>31622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.deleteMultipleContactsTest()[pri:5, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">deleteMultipleContactsTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:48:17</td>   <td>32491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectSingleContactsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectSingleContactsTest</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:52:55</td>   <td>-29681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.deleteSingleContactsTest()[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">deleteSingleContactsTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:46:16</td>   <td>-88655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:48:32</td>   <td>-292612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">loginPageTitleTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:50:53</td>   <td>-151362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">loginTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:51:36</td>   <td>-108531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectMultipleContactsTest()[pri:3, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectMultipleContactsTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:50:14</td>   <td>-190010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectSingleContactsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectSingleContactsTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:47:58</td>   <td>-326421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:46:57</td>   <td>-47244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:48:34</td>   <td>-290517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:47:33</td>   <td>-11471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:49:21</td>   <td>-243045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:47:45</td>   <td>1087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:49:40</td>   <td>-223942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:48:33</td>   <td>48975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:50:36</td>   <td>-168274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:49:18</td>   <td>93206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:51:02</td>   <td>-141907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:50:55</td>   <td>190957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:52:05</td>   <td>-79281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:52:07</td>   <td>262934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:52:24</td>   <td>-60675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:46:49</td>   <td>-55376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:53:15</td>   <td>-9670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:47:31</td>   <td>-12957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:53:25</td>   <td>1185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:47:44</td>   <td>76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:54:40</td>   <td>75374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:48:29</td>   <td>44564</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:55:28</td>   <td>123362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:50:51</td>   <td>187090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:56:29</td>   <td>184488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:51:56</td>   <td>251801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:57:16</td>   <td>231406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:47:31</td>   <td>-13569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">verifyContactsPageLabel</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:48:32</td>   <td>-292484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:49:19</td>   <td>-245296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:49:39</td>   <td>-224954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:50:29</td>   <td>-175227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:50:54</td>   <td>-150711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:51:58</td>   <td>-86441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:52:23</td>   <td>-61561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:53:13</td>   <td>-11040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:53:24</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:54:36</td>   <td>71380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:55:26</td>   <td>121481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:56:26</td>   <td>182174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:57:14</td>   <td>229501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:58:00</td>   <td>275720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:55:14</td>   <td>109211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:56:14</td>   <td>169972</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:57:01</td>   <td>216359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:57:48</td>   <td>263223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:49:18</td>   <td>-246115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">verifyContactsPageLabel</td> 
   <td>main@1704629915</td>   <td></td> </tr>
 </table>
