--- a/test-output/old/FREE CRM Application Test Automation Test Suite/methods.html
+++ b/test-output/old/FREE CRM Application Test Automation Test Suite/methods.html
@@ -1,44 +1,88 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>FREE CRM Application Test Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:46:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:47:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:46:49</td>   <td>33053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">loginPageTitleTest</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:48:32</td>   <td>33809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">loginPageTitleTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:46:49</td>   <td>33279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:48:32</td>   <td>33937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:46:57</td>   <td>41411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:48:34</td>   <td>35904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:47:31</td>   <td>75086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">verifyContactsPageLabel</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:49:18</td>   <td>80306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">verifyContactsPageLabel</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:47:31</td>   <td>75698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:49:19</td>   <td>81125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:47:33</td>   <td>77184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:49:21</td>   <td>83376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:47:44</td>   <td>88655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifyemailIDfieldTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifyemailIDfieldTest</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:49:39</td>   <td>101355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifyemailIDfieldTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifyemailIDfieldTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:47:44</td>   <td>88731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:49:39</td>   <td>101467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:47:45</td>   <td>89742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:49:40</td>   <td>102479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:48:17</td>   <td>121146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectSingleContactsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectSingleContactsTest</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:50:14</td>   <td>136411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectSingleContactsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectSingleContactsTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:48:29</td>   <td>133219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:50:29</td>   <td>151194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/08/19 13:48:33</td>   <td>137630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:50:36</td>   <td>158147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:49:18</td>   <td>181861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:50:08</td>   <td>232487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectMultipleContactsTest()[pri:3, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectMultipleContactsTest</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:50:53</td>   <td>175059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">loginTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:50:51</td>   <td>275745</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:50:54</td>   <td>175710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:50:55</td>   <td>279612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:51:02</td>   <td>184514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:51:41</td>   <td>325676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.deleteSingleContactsTest()[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">deleteSingleContactsTest</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:51:36</td>   <td>217890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectMultipleContactsTest()[pri:3, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">selectMultipleContactsTest</td> 
   <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:51:56</td>   <td>340456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<tr bgcolor="67a798">  <td>20/08/27 11:51:58</td>   <td>239980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
-<tr bgcolor="67a798">  <td>20/08/19 13:52:07</td>   <td>351589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<tr bgcolor="67a8a9">  <td>20/08/27 11:52:05</td>   <td>247140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:52:23</td>   <td>264716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifypasswordfieldTest()[pri:4, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifypasswordfieldTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:52:23</td>   <td>264860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:52:24</td>   <td>265746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:52:55</td>   <td>296740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.deleteSingleContactsTest()[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">deleteSingleContactsTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:53:13</td>   <td>315381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:53:15</td>   <td>316751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:53:24</td>   <td>326421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.VerifyLoginBtnTest()[pri:5, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">VerifyLoginBtnTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/08/27 11:53:24</td>   <td>326472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4278a03f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:53:25</td>   <td>327606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:53:56</td>   <td>358043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.deleteMultipleContactsTest()[pri:5, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">deleteMultipleContactsTest</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:54:36</td>   <td>397801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:54:40</td>   <td>401795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:55:14</td>   <td>435632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:55:26</td>   <td>447902</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:55:28</td>   <td>449783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:56:14</td>   <td>496393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:56:26</td>   <td>508595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:56:29</td>   <td>510909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:57:01</td>   <td>542780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:57:14</td>   <td>555922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:57:16</td>   <td>557827</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:57:48</td>   <td>589644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String)[pri:6, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">validateCreateNewContact</td> 
+  <td>main@1704629915</td>   <td></td> </tr>
+<tr bgcolor="67a798">  <td>20/08/27 11:58:00</td>   <td>602141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@147ed70f]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1704629915</td>   <td></td> </tr>
 </table>
